Iniciando a tela de recibo de saída de estoque (para impressão).

--- a/medsales/medsales-app/src/main/webapp/movimento/estoque/saida.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/estoque/saida.xhtml
@@ -208,6 +208,14 @@
 		</p:outputPanel>
 	</ui:define>
 
+	<ui:define name="botoesCustom">
+
+		<p:menuitem value="Exibir Recibo" icon="ui-icon-disk"
+			action="#{p_action.redirectIfNoError('reciboSaida.xhtml?lid='.concat(saidaAction.movimentacao.id))}" ajax="false" target="_blank" immediate="true" />
+
+	</ui:define>
+
+
 </ui:composition>
 
 </html>
